add gradle; fix using deprecated api